# rdb-lock-newbie

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  test_mysql.py  test_mysql_lock.py  test_mysql_lock_tiqwablog.py  test_mysql_lock_unyo_kanri_nyumon.py  test_postgresql_lock.py  test_postgresql_lock_insight.py  util.py
.github/workflows/: check.yml
db/mysql/conf.d/: my.cnf
db/postgres/: postgresql.conf
